# DummyOS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-iso.yml  ci.yml
config/: omni.example.json
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: apps.json
iso/: README.md  build-iso.sh
omni/: __init__.py  cli.py  config.py  registry.py
omni/agent/: __init__.py  agent.py  backends.py  permissions.py  tools.py
omni/daemon/: __init__.py  server.py
omni/runtimes/: __init__.py  android.py  base.py  linux.py  manager.py  windows.py
omni/system/: __init__.py  controls.py
tests/: test_agent.py  test_registry.py
